// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress[Base] should render correctly  1`] = `
<div
  class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
  style="width: 400px;"
>
  <div
    class="soui-progress-line-bg"
  >
    <div
      class="soui-progress-line-front"
      style="width: 75%;"
    />
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about animation 1`] = `
<div>
  <div>
    <div
      class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
      style="width: 400px;"
    >
      <div
        class="soui-progress-line-bg"
      >
        <div
          class="soui-progress-line-front"
          style="width: 0%;"
        />
      </div>
      <div
        class="soui-progress-content"
      >
        <div
          style="width: 50px;"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 24px;"
  >
    <div
      class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-success"
      style="width: 64px; height: 64px;"
    >
      <svg
        viewBox="0 0 64 64"
      >
        <circle
          class="soui-progress-circle-bg"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-width="4"
        />
        <circle
          class="soui-progress-circle-front"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-dasharray="0,188.49555921538757"
          stroke-linecap="round"
          stroke-width="0"
        />
      </svg>
      <div
        class="soui-progress-content"
      >
        0%
      </div>
    </div>
  </div>
  <button
    class="soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    style="margin-top: 24px;"
    type="button"
  >
    <span>
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about circle 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="0,188.49555921538757"
        stroke-linecap="round"
        stroke-width="0"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      0%
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      60%
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-warning"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="131.9468914507713,56.54866776461628"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.4331 4.48155C10.4051 3.91069 10.8604 3.4325 11.4319 3.4325H12.5713C13.1428 3.4325 13.5981 3.91069 13.5701 4.48155L13.0683 14.6976C13.0422 15.2301 12.6027 15.6485 12.0695 15.6485H11.9337C11.4005 15.6485 10.9611 15.2301 10.9349 14.6976L10.4331 4.48155ZM11.9896 16.9445C12.5176 16.9445 12.9736 17.1125 13.3336 17.4485C13.6696 17.7845 13.8616 18.2165 13.8616 18.7445C13.8616 19.2725 13.6696 19.7285 13.3336 20.0645C12.9496 20.4005 12.5176 20.5685 11.9896 20.5685C11.4616 20.5685 11.0296 20.3765 10.6936 20.0405C10.3096 19.7045 10.1416 19.2725 10.1416 18.7445C10.1416 18.2165 10.3096 17.7845 10.6936 17.4485C11.0296 17.1125 11.4616 16.9445 11.9896 16.9445Z"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-success"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="188.49555921538757,0"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M1.2947 13.0708L6.95013 18.7262C7.73219 19.5083 8.99933 19.5083 9.78139 18.7262L21.1217 7.38591C21.512 6.99559 21.512 6.36202 21.1217 5.9717C20.7314 5.58137 20.0978 5.58137 19.7075 5.9717L8.31714 17.0881L2.70891 11.6566C2.31859 11.2663 1.68502 11.2663 1.2947 11.6566C0.904372 12.0469 0.904372 12.6805 1.2947 13.0708Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-danger"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="169.64600329384882,18.84955592153875"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about color 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      40%
    </div>
  </div>
  <br />
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%;"
      >
        <div
          class="soui-progress-content"
        >
          75%
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <defs>
        <lineargradient
          id="progress-linear"
          x1="50%"
          x2="50%"
          y1="0%"
          y2="100%"
        >
          <stop
            offset="0%"
            stop-color="#19A9FA"
          />
          <stop
            offset="100%"
            stop-color="#7949FF"
          />
        </lineargradient>
      </defs>
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
        style="stroke: url('#progress-linear');"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      60%
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about lineInner 1`] = `
<div
  style="display: flex; flex-direction: column; gap: 24px; width: 400px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner soui-progress-line-inner-right"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 0%;"
      >
        <div
          class="soui-progress-content"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner soui-progress-line-inner-right"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 5%;"
      >
        <div
          class="soui-progress-content"
        >
          5%
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%;"
      >
        <div
          class="soui-progress-content"
        >
          10%
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-warning soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 50%;"
      >
        <div
          class="soui-progress-content"
        >
          50%
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-success soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 100%;"
      >
        <div
          class="soui-progress-content"
        >
          100%
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-danger soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 60%;"
      >
        <div
          class="soui-progress-content"
        >
          60%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about linePop 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default soui-progress-line-pop"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 0%;"
      />
    </div>
    <div
      class="soui-progress-line-pop-wrapper"
      style="left: 0%; transform: translateX(-50%) rotate(0deg);"
    >
      <span
        class="soui-progress-line-pop-value"
      >
        0%
      </span>
      <span
        class="soui-progress-line-pop-arrow"
      />
    </div>
  </div>
  <button
    class="soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    style="margin-top: 24px;"
    type="button"
  >
    <span>
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about size 1`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      <span>
        75%
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%;"
      >
        <div
          class="soui-progress-content"
        >
          <span>
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      <span>
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about size 2`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 3px; border-radius: 1.5px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%; border-radius: 1.5px;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 12px;"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 16px; border-radius: 8px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%; border-radius: 8px;"
      >
        <div
          class="soui-progress-content"
        >
          <span
            style="font-size: 12px;"
          >
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 48px; height: 48px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 48 48"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="24"
        cy="24"
        fill="transparent"
        r="22"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="24"
        cy="24"
        fill="transparent"
        r="22"
        stroke-dasharray="82.93804605477052,55.29203070318036"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 12px;"
      >
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about size 3`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 8px; border-radius: 4px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%; border-radius: 4px;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 16px;"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 24px; border-radius: 12px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%; border-radius: 12px;"
      >
        <div
          class="soui-progress-content"
        >
          <span>
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 80px; height: 80px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 80 80"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="40"
        cy="40"
        fill="transparent"
        r="38"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="40"
        cy="40"
        fill="transparent"
        r="38"
        stroke-dasharray="143.25662500369455,95.50441666912971"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 16px;"
      >
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about type 1`] = `
<div
  style="width: 400px; display: flex; flex-direction: column; gap: 24px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-success soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 100%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      100%
    </div>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM6.34315 13.8284L8.46305 15.9483C9.24511 16.7304 10.5122 16.7304 11.2943 15.9483L17.6569 9.58579C18.0472 9.19546 18.0472 8.5619 17.6569 8.17157C17.2665 7.78125 16.633 7.78125 16.2426 8.17157L10.5872 13.827C10.1962 14.218 9.56119 14.218 9.17016 13.827L7.75736 12.4142C7.36704 12.0239 6.73347 12.0239 6.34315 12.4142C5.95282 12.8045 5.95282 13.4381 6.34315 13.8284Z"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 90%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      90%
    </div>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM11.4373 20.0049C10.8633 20.0049 10.4072 19.5229 10.4388 18.9498L10.9285 10.064C10.9578 9.53393 11.3961 9.11906 11.927 9.11906H12.0742C12.6051 9.11906 13.0435 9.53393 13.0727 10.064L13.5625 18.9498C13.5941 19.5229 13.1379 20.0049 12.564 20.0049H11.4373ZM13.3326 7.24796C12.9726 7.58395 12.5166 7.75196 11.9886 7.75196C11.4606 7.75196 11.0286 7.58395 10.6926 7.24796C10.3086 6.91196 10.1406 6.47995 10.1406 5.95195C10.1406 5.42396 10.3086 4.99195 10.6926 4.65595C11.0286 4.31996 11.4606 4.12795 11.9886 4.12795C12.5166 4.12795 12.9486 4.29596 13.3326 4.63195C13.6686 4.96795 13.8606 5.42396 13.8606 5.95195C13.8606 6.47995 13.6686 6.91196 13.3326 7.24796Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-warning soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 80%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      80%
    </div>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M12.0005 22.9906C18.0704 22.9906 22.9911 18.07 22.9911 12C22.9911 5.92997 18.0704 1.00928 12.0005 1.00928C5.93046 1.00928 1.00977 5.92997 1.00977 12C1.00977 18.07 5.93046 22.9906 12.0005 22.9906ZM11.4371 4.12797C10.8632 4.12797 10.407 4.60996 10.4386 5.183L10.9284 14.0688C10.9576 14.5989 11.3959 15.0138 11.9268 15.0138H12.074C12.605 15.0138 13.0433 14.5989 13.0725 14.0688L13.5623 5.183C13.5939 4.60996 13.1377 4.12797 12.5638 4.12797H11.4371ZM13.3325 16.8849C12.9725 16.5489 12.5165 16.3809 11.9885 16.3809C11.4605 16.3809 11.0285 16.5489 10.6925 16.8849C10.3085 17.2209 10.1405 17.6529 10.1405 18.1809C10.1405 18.7089 10.3085 19.1409 10.6925 19.4769C11.0285 19.8129 11.4605 20.0049 11.9885 20.0049C12.5165 20.0049 12.9485 19.8369 13.3325 19.5009C13.6685 19.1649 13.8605 18.7089 13.8605 18.1809C13.8605 17.6529 13.6685 17.2209 13.3325 16.8849Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-danger soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 70%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      70%
    </div>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
        />
      </svg>
    </div>
  </div>
</div>
`;
